@@ -16,14 +16,14 @@
  * limitations under the License.
  */
 
-App.TaskCountersController = App.PollingController.extend(App.ModelRefreshMixin, {
-  controllerName: 'TaskCountersController',
+App.TaskAttemptCountersController = App.PollingController.extend(App.Helpers.DisplayHelper, App.ModelRefreshMixin, {
+  controllerName: 'TaskAttemptCountersController',
 
-  pollingType: 'taskInfo',
+  pollingType: 'attemptInfo',
 
   pollsterControl: function () {
-    if(this.get('vertex.dag.status') == 'RUNNING' &&
-        this.get('vertex.dag.amWebServiceVersion') != '1' &&
+    if(this.get('task.vertex.dag.status') == 'RUNNING' &&
+        this.get('task.vertex.dag.amWebServiceVersion') != '1' &&
         this.get('pollingEnabled') &&
         this.get('isActive')) {
       this.get('pollster').start();
@@ -31,7 +31,7 @@ App.TaskCountersController = App.PollingController.extend(App.ModelRefreshMixin,
     else {
       this.get('pollster').stop();
     }
-  }.observes('vertex.dag.status', 'vertex.dag.amWebServiceVersion', 'isActive', 'pollingEnabled'),
+  }.observes('task.vertex.dag.status', 'task.vertex.dag.amWebServiceVersion', 'isActive', 'pollingEnabled'),
 
   pollsterOptionsObserver: function () {
     var model = this.get('model');
@@ -39,10 +39,12 @@ App.TaskCountersController = App.PollingController.extend(App.ModelRefreshMixin,
     this.get('pollster').setProperties( (model && model.get('status') != 'SUCCEEDED') ? {
       targetRecords: [model],
       options: {
-        appID: this.get('vertex.dag.applicationId'),
+        appID: this.get('task.vertex.dag.applicationId'),
         dagID: App.Helpers.misc.getIndexFromId(this.get('dagID')),
-        taskID: '%@_%@'.fmt(
+        //ID: App.Helpers.misc.getIndexFromId(this.get('id')),
+        attemptID: '%@_%@_%@'.fmt(
           App.Helpers.misc.getIndexFromId(this.get('vertexID')),
+          App.Helpers.misc.getIndexFromId(this.get('taskID')),
           App.Helpers.misc.getIndexFromId(this.get('id'))
         ),
         counters: '*'
@@ -51,14 +53,5 @@ App.TaskCountersController = App.PollingController.extend(App.ModelRefreshMixin,
       targetRecords: [],
       options: null
     });
-  }.observes('vertex.dag.applicationId', 'status', 'dagID', 'vertexID', 'id'),
-
-  message: function () {
-    var status = this.get('content.status');
-    if(!this.get('content.counterGroups.length')) {
-      if(status == 'KILLED' || status == 'FAILED') {
-        return 'Task %@, please check the counters of individual task attempts.'.fmt(status);
-      }
-    }
-  }.property('content.status', 'content.counterGroups.length')
+  }.observes('task.vertex.dag.applicationId', 'status', 'dagID', 'vertexID', 'id'),
 });
